// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasicLayout correctly handles "/" route 1`] = `
<div
  className="root"
>
  <div
    className="root"
  >
    <span
      className="menu_item"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text menu_item_button"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root menu_item_icon MuiSvgIcon-fontSizeSmall"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
            />
          </svg>
          <p
            className="MuiTypography-root menu_item_text MuiTypography-body1"
          >
            Characters
          </p>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </span>
    <span
      className="menu_item_delimiter"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.5 5H11l5 7-5 7h4.5l5-7z"
        />
        <path
          d="M8.5 5H4l5 7-5 7h4.5l5-7z"
        />
      </svg>
    </span>
    <span
      className="menu_item"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text menu_iten_button"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root menu_item_icon MuiSvgIcon-fontSizeSmall"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 5.9c1.16 0 2.1.94 2.1 2.1s-.94 2.1-2.1 2.1S9.9 9.16 9.9 8s.94-2.1 2.1-2.1m0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1M12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
            />
          </svg>
          <p
            className="MuiTypography-root menu_item_text MuiTypography-body1"
          />
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </span>
  </div>
  <div>
    <div>
      <div
        className="img_container"
      >
        <img
          alt="Loading"
          className="img"
          src="loading.jpg"
        />
        <div
          className="text"
        >
          Loading...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BasicLayout correctly handles "/characters/1" route 1`] = `
<div
  className="root"
>
  <div
    className="root"
  >
    <span
      className="menu_item"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text menu_item_button"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root menu_item_icon MuiSvgIcon-fontSizeSmall"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
            />
          </svg>
          <p
            className="MuiTypography-root menu_item_text MuiTypography-body1"
          >
            Characters
          </p>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </span>
    <span
      className="menu_item_delimiter"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.5 5H11l5 7-5 7h4.5l5-7z"
        />
        <path
          d="M8.5 5H4l5 7-5 7h4.5l5-7z"
        />
      </svg>
    </span>
    <span
      className="menu_item"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text menu_iten_button"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root menu_item_icon MuiSvgIcon-fontSizeSmall"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 5.9c1.16 0 2.1.94 2.1 2.1s-.94 2.1-2.1 2.1S9.9 9.16 9.9 8s.94-2.1 2.1-2.1m0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1M12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
            />
          </svg>
          <p
            className="MuiTypography-root menu_item_text MuiTypography-body1"
          />
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </span>
  </div>
  <div>
    <div>
      <div
        className="page_container"
      >
        <div
          className="detail_card_container"
        >
          <div
            className="MuiPaper-root detail_card MuiPaper-elevation1 MuiPaper-rounded"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-text back_button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                <span
                  className="MuiButton-startIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                    />
                  </svg>
                </span>
                Characters Page
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            className="MuiPaper-root detail_card MuiPaper-elevation1 MuiPaper-rounded"
          >
            <p
              className="MuiTypography-root detail_item MuiTypography-body1"
            >
              <span
                className="detail_item_key"
              >
                Name
              </span>
              <span
                className="detail_item_value"
              />
            </p>
            <hr
              className="MuiDivider-root"
            />
            <p
              className="MuiTypography-root detail_item MuiTypography-body1"
            >
              <span
                className="detail_item_key"
              >
                Status
              </span>
              <span
                className="detail_item_value"
              />
            </p>
            <hr
              className="MuiDivider-root"
            />
            <p
              className="MuiTypography-root detail_item MuiTypography-body1"
            >
              <span
                className="detail_item_key"
              >
                Origin
              </span>
              <span
                className="detail_item_value"
              />
            </p>
            <hr
              className="MuiDivider-root"
            />
          </div>
          <img
            alt="Character"
          />
        </div>
        <div>
          <div
            className="MuiPaper-root MuiTableContainer-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <table
              aria-label="simple table"
              className="MuiTable-root table"
            >
              <thead
                className="MuiTableHead-root"
              >
                <tr
                  className="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    aria-sort={null}
                    className="MuiTableCell-root MuiTableCell-head"
                    scope="col"
                  >
                    Episode 
                  </th>
                  <th
                    aria-sort={null}
                    className="MuiTableCell-root MuiTableCell-head"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    aria-sort={null}
                    className="MuiTableCell-root MuiTableCell-head"
                    scope="col"
                  >
                    Air Date
                  </th>
                </tr>
              </thead>
              <tbody
                className="MuiTableBody-root"
              />
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
